<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- Kullanıcı Bilgileri -->

    <!-- Şifre Değiştirme -->

    <TextView
        android:id="@+id/tvUserInfo"
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:layout_marginBottom="16dp"
        android:text="@string/user_info"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/change_password" />

    <!-- Premium Plan ve Özellikler -->
    <Button
        android:id="@+id/btnPremiumPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/premium_plan" />

    <!-- Hakkımızda -->
    <Button
        android:id="@+id/btnAboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/about_us" />

    <!-- Ayarlar -->
    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/settings" />

    <!-- Çıkış Yap -->

    <!-- Hesap Değiştirme -->

    <Button
        android:id="@+id/btnSwitchAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/switch_account" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/logout" />

</LinearLayout>
