<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp">

    <!-- Kullanıcı Adı -->
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:hint="@string/username"
        android:inputType="text" />

    <!-- Şifre -->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <!-- Şifremi Unuttum -->
    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:paddingTop="8dp" />



    <!-- Giriş Yap -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:text="@string/login" />

    <!-- Google ile Giriş (Şimdilik devre dışı) -->
    <Button
        android:id="@+id/btn_google_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_google"
        android:visibility="gone" />

    <!-- Kayıt Ol -->
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:text="@string/register" />
</LinearLayout>
